--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,17 @@
 .App {
-  max-width: 600px;
+  max-width: 700px;
   margin: 30px auto;
 }
 
 .App footer {
   font-size: 15px;
-  margin: 10px 0;
+  margin: 40px 0;
+  font-weight: 500;
+  color: white;
+  text-align: center;
+}
+
+.App footer a {
+  color: yellow;
+  text-decoration: none;
 }
